v$(node -p -e require('../package.json').version)

--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -80,7 +80,7 @@
 		"4": "Həkimlərin təyin etmiş olduğu müalicə üsulları və dərman vasitələri onların öz məsuliyyətindədir.",
 		"5": "Platformamız bu müalicə üsulları və dərmanların təsirinə və ya təsirsizliyinə görə hər hansı bir məsuliyyət daşımamaqdadır.",
 		"h1": "1. Ümumi Şərtlər",
-		"c1": "səhiyyə.net, istifadəçilərə onlayn tibbi məsləhətlər təqdim etmək məqsədilə fəaliyyət göstərir.Platforma tibbi məsləhət xidməti təklif etsə də, tam müalicə və ya diaqnoz üçün sağlamlıq problemləri ilə bağlı qərarlar verməzdən əvvəl yerli səhiyyə orqanları ilə də məsləhətləşməlidirlər.",
+		"c1": "səhiyyə.net, istifadəçilərə onlayn tibbi məsləhətlər təqdim etmək məqsədilə fəaliyyət göstərir. Platforma tibbi məsləhət xidməti təklif etsə də, pasientlər tam müalicə və ya diaqnoz üçün sağlamlıq problemləri ilə bağlı qərarlar verməzdən əvvəl yerli səhiyyə orqanları ilə də məsləhətləşməlidirlər.",
 		"h2": "2. Həkim Məsuliyyəti",
 		"c2": "Həkimlər təyin etdikləri müalicə və dərmanlar ilə bağlı bütün məsuliyyəti öz üzərinə götürürlər və bunlara görə pasiyent tərəfindən sehiyye.net platformasına qarşı heç bir iddia qaldırıla bilməz. Platformada fəaliyyət göstərən həkimlərin özləri məsləhət xidmətlərinin düzgünlüyü və etibarlılığına görə məsuliyyət daşıyırlar. səhiyyə.net, həkimlərin verdiyi məsləhətlər, müalicə metodları, yazdığı dərmanlar və digər tövsiyələrə görə hər hansı bir məsuliyyətə cəlb oluna bilməz.",
 		"h3": "3. Xidmətin Məhdudlaşdırılması",
@@ -90,7 +90,7 @@
 		"h5": "5. Məxfilik Siyasəti",
 		"c5": "səhiyyə.net, istifadəçilərin şəxsi məlumatlarının qorunmasına böyük önəm verir. Platformamızda qeydiyyatdan keçərkən və ya xidmətlərdən istifadə edərkən təqdim etdiyiniz şəxsi məlumatlar bizim məxfilik siyasətimizə uyğun olaraq işlənir və üçüncü tərəflərə ötürülmür. Məlumatların təhlükəsizliyi təmin edilsə də, onlayn platformalarda tam təhlükəsizlik təmin edilə bilməyəcəyindən istifadəçilər bu riskləri qəbul edir.",
 		"h6": "6. Ödənişlər və İadə Şərtləri",
-		"c6": "Platformada göstərilən xidmətlərə görə ödənişlər qəbul edildikdən sonra geri qaytarılmır. İstənilən halda, ödəniş şərtləri və məbləğlər platforma daxilində göstəriləcək və istifadəçilərdən bu şərtləri qəbul etmələri tələb olunacaq. Mübahisəli hallar olduqda, istifadəçilər müvafiq dəstək kanalları vasitəsilə əlaqə saxlaya bilərlər.",
+		"c6": "Platformada göstərilən xidmətlərə görə ödənişlər qəbul edildikdən sonra geri qaytarılmır. Mübahisəli hallar olduqda, istifadəçilər müvafiq dəstək kanalları vasitəsilə əlaqə saxlaya bilərlər.",
 		"h7": "7. Platformanın Fəaliyyəti və Məsuliyyəti",
 		"c7": "səhiyyə.net platformasının fasiləsiz və problemsiz işləməsi üçün bütün lazımi tədbirlər görülmüşdür. Lakin texniki nasazlıqlar, sistem problemləri və ya üçüncü tərəflərin fəaliyyəti nəticəsində yaranan fasilələrdən dolayı səhiyyə.net məsuliyyət daşımır. Platformanın işləməsinə dair hər hansı problemlər və ya suallar yaranarsa, istifadəçilər müvafiq texniki dəstək almalıdırlar.",
 		"h8": "8. İstifadə Şərtlərinin Dəyişdirilməsi",
