v$(node -p -e require('../package.json').version)

--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -132,7 +132,8 @@
 	"profile": {
 		"docs": "Analizlərim və Reseptlərim",
 		"doctors": "Həkimlərim",
-		"logout": "Hesabdan Çıxış"
+		"logout": "Hesabdan Çıxış",
+		"notifications": "Bildirişlər"
 	},
 	"call": {
 		"mic_off": "Mikrofonu söndür",
