v$(node -p -e require('../package.json').version)

--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -63,7 +63,7 @@
 	"faq": {
 		"q1": "NECƏ İSTİFADƏ OLUNUR?",
 		"a1": "Görüş sifariş etmək sadədir. Bu addımları yerinə yetirin: Hesabınıza daxil olun. 'Gündəlik sifariş et' bölməsinə keçin. Mövcud həkimlər siyahısından həkim seçin. Görüşünüz üçün əlverişli tarix və vaxt seçin. Görüş təfərrüatlarınızı təsdiqləyin və rezervasiyanı tamamlayın.",
-		"q2": "TEZ TEZ SORUŞULAN SUALLAR",
+		"q2": "TEZ TEZ VERİLƏN SUALLAR",
 		"a2": "Görüşünüzü ləğv etmək və ya yenidən planlaşdırmaq lazımdırsa, bu addımları yerinə yetirin: Hesabınıza daxil olun. 'Mənim görüşlərim' bölməsinə keçin. Dəyişdirmək istədiyiniz görüşü tapın. 'Ləğv et' və ya  üzərinə klikləyin. Yenidən planlaşdırma' düyməsi. Yenidən planlaşdırırsınızsa, yeni tarix və vaxt seçin və dəyişiklikləri təsdiqləyin.",
 		"q3": "İSTİFADƏ ŞƏRTLƏRİ",
 		"a3": "Həkiminizlə videozəngə qoşulmaq üçün bu addımları yerinə yetirin: Hesabınıza daxil olun. 'Mənim görüşlərim' bölməsinə keçin. Qarşıdan gələn görüşü tapın və üzərinə klikləyin. Planlaşdırılmış vaxtda ' Video Zəngə Qoşulun' düyməsi. Zəng üçün kameranızın və mikrofonunuzun aktiv olduğundan əmin olun.",
