v$(node -p -e require('../package.json').version)

--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -164,16 +164,31 @@
 	},
 	"usage": {
 		"header": "İstifadə Qaydaları",
-		"register": "Qeydiyyat",
-		"register_details": "İlk olaraq platformada qeydiyyatdan keçərək özünüzə şəxsi profil hesabı yaradın. Adınızı, email ünvanınızı və ya telefon nömrənizi daxil edin. Bu şəxsi profilinizdə daha sonra tibbi məlumatlarınız və konsultasiya keçmişiniz olacaqdır. İstədiyiniz təqdirdə bu məlumatları daha sonra silə vəya dəyişdirə bilərsiniz.",
-		"get_appointment": "Randevu Alın",
-		"get_appointment_details": "Qeydiyyatdan keçdikdən sonra, hesabınıza daxil olun və 'Randevu Al' bölməsinə keçin. Burada ixtisas sahəsi üzrə həkiminizi seçərək uyğun vaxt təyin edin.",
-		"payment": "Ödəniş edin",
-		"payment_details": "Xidmət haqqını randevudan əvvəl online olaraq ödəyə bilərsiniz. Ödənişiniz keçdikdən sonra randevunuz aktivləşmiş hesab olunur.",
-		"join_appointment": "Həkimlə görüş",
-		"join_appointment_details": "Təyin etdiyiniz vaxtda platformaya daxil olun və 'Mənim Randevularım' bölməsindən video zəngə qoşulun. Həkiminizlə suallarınızı müzakirə edin. Almış olduğunuz randevu sizə həkiminizlə 5 mesaj və iki dəfə video görüş haqqı tanıyır. Əgər həkiminiz sizdən bəzi analizlər tələb edərsə bunları olduğunuz şəhərin klinika vəya laboratoriyalarında verərək həkiminizə yollaya bilərsiniz. Daha sonra analiz nəticələrinizi müzakirə üçün həkiminizə yenidən randevu alaraq ikinci dəfə ödənişsiz görüş haqqınızdan istifadə edə bilərsiniz.",
-		"check_appointment": "Məlumatlara baxış",
-		"check_appointment_details": "Hər bir randevudan sonra öz profilinizdə həkimlə yazışmalarınız, konsultasiya keçmişiniz və bütün digər məlumatlarınızı görə bilərsiniz."
+		"register": "Hesab yaradın",
+		"reg1": "İstifadə etmək üçün ilk addım kimi platformada şəxsi hesabınızı yaradın.",
+		"reg2": "Adınızı, email ünvanınızı və ya telefon nömrənizi daxil edin.",
+		"reg3": "Bu şəxsi profilinizdə daha sonra tibbi məlumatlarınız və konsultasiya keçmişiniz olacaqdır. İstədiyiniz təqdirdə bu məlumatları daha sonra silə vəya dəyişdirə bilərsiniz",
+		"reg4": "Görüş bildirimlərinizi daha interaktiv almaq üçün ‘WhatApp ilə bildiriş al’ butonunu aktiv edə bilərsiniz",
+		"choose_doc": "Həkiminizi seçin",
+		"doc1": "Həkimlərin siyahısından axtarış edərək istəyinizə uyğun həkimi seçin.",
+		"doc2": "Hər bir həkimin profilinə daxil olaraq haqqında olan bütün məlumatlarla tanış ola bilərsiniz",
+		"doc3": "Həkim seçimi kriteriyalarını ixtisas, ölkə və ya həkimin ixtisas dərəcəsinə görə də müəyyənləşdirə bilərsiniz",
+		"get_app": "Görüş vaxtı təyin edin",
+		"app1": "Seçdiyiniz həkimin profilində ‘Həkimdən Görüş Al’ bölməsinə keçid edərək həkimin uyğun vaxtları arasından özünüzə uyğun olanı təyin edin.",
+		"pay": "Ödəniş edin",
+		"pay1": "Xidmət haqqını görüşdən əvvəl online olaraq istənilən bank kartı vasitəsiylə ödəyə bilərsiniz.",
+		"pay2": "Ödəniş etdikdən sonra görüşünüz aktiv edilmiş hesab olunur və həkimin təsdiqini gözləyir.",
+		"pay3": "Nəzərinizə çatdırırıq ki, görüşünüzün vaxtı həkim tərəfindən dəyişdirilə bilər. Bu təqdirdə yeni təyin olunan vaxt sizə bildiriş olaraq göndərilir və dəyişikliklər profilinizdə qeyd olunur.",
+		"join_app": "Video konsultasiyaya qoşulun",
+		"japp1": "Təyin edilən vaxtda platformada ‘Görüşlər’ bölməsi altında ‘Planlanan Görüşlər’ alt bölməsinə daxil olub, həkiminizlə video konsultasiya keçirin.",
+		"japp2": "Əgər həkiminiz sizdən bəzi analizlər tələb edərsə bunları olduğunuz şəhərin klinika vəya laboratoriyalarında verərək həkiminizə yollaya bilərsiniz.",
+		"files": "Resept və Analizlər",
+		"file1": "Həkiminizin tələb etdiyi analiz nəticələrini profilinizə daxil olaraq həkiminizə mesaj olaraq göndərə bilərsiniz.",
+		"file2": "Eyni zamanda həkiminizin yazacağı reseptləri və analizlərinizin nəticələrini profilinizdə olan ‘Analizlərim və Reseptlərim’ bölümündə görə bilərsiniz.",
+		"reapp": "Təkrar müraciət",
+		"re1": "Bir ödəniş sizə eyni həkimlə 10 gün ərzində iki görüş və limitsiz mesaj haqqı verir. Yenidən görüşə ehtiyac olarsa ödəniş etmədən yuxarıdaki proseduraları təkrarlayaraq ikinci haqqınızdan istifadə edə bilərsiniz.",
+		"check_info": "Məlumatlara Baxış",
+		"check1": "Hər bir randevudan sonra öz profilinizdə həkimlə yazışmalarınız, konsultasiya keçmişiniz və bütün digər məlumatlarınızı görə bilərsiniz."
 	},
 	"months": {
 		"1": "Yanvar",
