v$(node -p -e require('../package.json').version)

--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -29,6 +29,7 @@
 		"await_confirmation": "Şərhiniz təsdiq gözləyir ..",
 		"no_comments": "Həkim haqqında şərh yoxdur",
 		"hospitals": "İşlədiyi xəstəxanalar",
+		"education": "Təhsil",
 		"certificates": "Sertifikatlar",
 		"langs_spoken": "Danışdığı dillər",
 		"diseases": "Müalicə etdiyi xəstəliklər",
