v$(node -p -e require('../package.json').version)

--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -134,6 +134,7 @@
 		"docs": "Analizlərim və Reseptlərim",
 		"doctors": "Həkimlərim",
 		"logout": "Hesabdan Çıxış",
+		"confirm_logout": "Hesabdan çıxmaq istəyirsiniz?",
 		"notifications": "Bildirişlər"
 	},
 	"call": {
