v$(node -p -e require('../package.json').version)

--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -151,6 +151,7 @@
 		"login_header": "Hesaba giriş",
 		"mobile": "Mobil",
 		"pass": "Şifrə",
+		"new_pass": "Yeni Şifrə",
 		"login": "Giriş",
 		"no_account": "Hesabın yoxdur?",
 		"yes_account": "Hesabınız var?",
