v$(node -p -e require('../package.json').version)

--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -190,7 +190,7 @@
 		"file1": "Həkiminizin tələb etdiyi analiz nəticələrini profilinizə daxil olaraq həkiminizə mesaj olaraq göndərə bilərsiniz.",
 		"file2": "Eyni zamanda həkiminizin yazacağı reseptləri və analizlərinizin nəticələrini profilinizdə olan ‘Analizlərim və Reseptlərim’ bölümündə görə bilərsiniz.",
 		"reapp": "Təkrar müraciət",
-		"re1": "Bir ödəniş sizə eyni həkimlə 10 gün ərzində iki görüş və limitsiz mesaj haqqı verir. Yenidən görüşə ehtiyac olarsa ödəniş etmədən yuxarıdaki proseduraları təkrarlayaraq ikinci haqqınızdan istifadə edə bilərsiniz.",
+		"re1": "Bir ödəniş sizə eyni həkimlə 10 gün ərzində iki görüş və 10 mesaj haqqı verir. Yenidən görüşə ehtiyac olarsa ödəniş etmədən yuxarıdaki proseduraları təkrarlayaraq ikinci haqqınızdan istifadə edə bilərsiniz.",
 		"check_info": "Məlumatlara Baxış",
 		"check1": "Hər bir randevudan sonra öz profilinizdə həkimlə yazışmalarınız, konsultasiya keçmişiniz və bütün digər məlumatlarınızı görə bilərsiniz."
 	},
