--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -111,6 +111,8 @@
 		"leave": "Çıxış",
 		"leave_call": "Bağla",
 		"update": "Yenilə",
+		"save": "Yadda saxla",
+		"save_changes": "Dəyişiklikləri yadda saxla?",
 		"success": "Uğurlu",
 		"add_pp": "Yeni şəkil əlavə et",
 		"remove_pp": "Profil şəklini sil",
@@ -135,7 +137,7 @@
 		"doctors": "Həkimlərim",
 		"logout": "Hesabdan Çıxış",
 		"confirm_logout": "Hesabdan çıxmaq istəyirsiniz?",
-		"notifications": "Bildirişlər"
+		"notifications": "Bildiriş ayarları"
 	},
 	"call": {
 		"mic_off": "Mikrofonu söndür",
