v$(node -p -e require('../package.json').version)

--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -119,6 +119,7 @@
 		"view_pp": "Şəklə bax",
 		"close": "Bağla",
 		"add_file": "Fayl əlavə et",
+		"send_file": "Fayl göndər",
 		"delete_file": "Faylı sil",
 		"wait": "Gözləyin",
 		"details": "Ətraflı",
