v$(node -p -e require('../package.json').version)

--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -109,6 +109,7 @@
 		"confirm": "Təsdiqlə",
 		"send": "Göndər",
 		"clear": "Təmizlə",
+		"download": "Endir",
 		"leave": "Çıxış",
 		"leave_call": "Bağla",
 		"update": "Yenilə",
