v$(node -p -e require('../package.json').version)

--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -160,7 +160,7 @@
 		"login": "Giriş",
 		"no_account": "Hesabın yoxdur?",
 		"yes_account": "Hesabınız var?",
-		"register": "Qeydiyyat",
+		"register": "Yeni hesab yarat",
 		"login_account": "Hesaba giriş",
 		"name_surname": "Ad Soyad",
 		"email": "Email",
